--- a/app/src/main/res/layout-large-port/activity_global_position.xml
+++ b/app/src/main/res/layout-large-port/activity_global_position.xml
@@ -7,36 +7,35 @@
     android:layout_height="match_parent"
     tools:context=".activities.GlobalPositionActivity">
 
-    <!-- Título principal -->
-    <TextView
-        android:id="@+id/posicionGlobal"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
-        android:text="@string/posicion_globall"
-        android:textAlignment="center"
-        android:layout_marginTop="32dp"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintEnd_toEndOf="parent"
+
+
+    <ScrollView
+        android:id="@+id/scrollView"
+        android:layout_width="0dp"
+        android:layout_height="0dp"
         app:layout_constraintTop_toTopOf="parent"
-        style="@style/TextAppearance.MaterialComponents.Headline5" />
-
-    <TextView
-        android:id="@+id/cuenta"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/cuentas"
-        android:textSize="20sp"
-        android:layout_marginTop="20dp"
-        android:layout_marginStart="20dp"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/posicionGlobal" />
-
-    <androidx.fragment.app.FragmentContainerView
-        android:id="@+id/fragmentContainer"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/cuenta"
-        tools:layout="@layout/fragment_accounts" />
+        app:layout_constraintBottom_toBottomOf="parent">
+
+        <LinearLayout
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:orientation="vertical">
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fragmentContainer"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout="@layout/fragment_accounts" />
+
+            <androidx.fragment.app.FragmentContainerView
+                android:id="@+id/fragmentContainerMovement"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                tools:layout="@layout/fragment_account_movements" />
+
+        </LinearLayout>
+    </ScrollView>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
