--- a/app/src/main/res/layout/activity_movements.xml
+++ b/app/src/main/res/layout/activity_movements.xml
@@ -7,7 +7,7 @@
     android:layout_height="match_parent"
     tools:context=".activities.MovementsActivity">
 
-    <com.google.android.material.textview.MaterialTextView
+    <TextView
         android:id="@+id/Movimientos"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
@@ -15,6 +15,7 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         android:text="@string/movimientoss"
+        android:fontFamily="@font/glaston"
         android:textAlignment="center"
         style="@style/TextAppearance.MaterialComponents.Headline5"
         android:layout_marginTop="20dp"
