--- a/app/src/main/res/layout/activity_password.xml
+++ b/app/src/main/res/layout/activity_password.xml
@@ -17,6 +17,7 @@
         android:layout_marginEnd="16dp"
         android:text="@string/cambiar_la_contrase_a"
         android:textSize="24sp"
+        android:fontFamily="@font/glaston"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -93,6 +94,7 @@
         android:id="@+id/btAceptar"
         android:layout_width="0dp"
         android:layout_height="53dp"
+        style="@style/botones.BancoEnnama"
         android:layout_marginTop="124dp"
         android:text="@string/aceptar"
         app:layout_constraintEnd_toStartOf="@+id/guideline"
@@ -106,6 +108,7 @@
         android:layout_height="53dp"
         android:layout_marginTop="124dp"
         android:text="@string/salir"
+        style="@style/botones.BancoEnnama"
         app:layout_constraintStart_toEndOf="@+id/guideline"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintTop_toBottomOf="@id/password2"
