--- a/app/src/main/res/layout/fragment_account_movements.xml
+++ b/app/src/main/res/layout/fragment_account_movements.xml
@@ -17,6 +17,7 @@
             app:layout_constraintStart_toStartOf="parent"
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/movimientoss"
+            android:fontFamily="@font/glaston"
             android:textAlignment="center"
             style="@style/TextAppearance.MaterialComponents.Headline5"
             android:layout_marginTop="20dp"
