--- a/app/src/main/res/layout/fragment_accounts.xml
+++ b/app/src/main/res/layout/fragment_accounts.xml
@@ -15,6 +15,7 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
             android:text="@string/posicion_globall"
+            android:fontFamily="@font/glaston"
             android:textAlignment="center"
             android:layout_marginTop="32dp"
             app:layout_constraintStart_toStartOf="parent"
