--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -7,5 +7,15 @@
 
     <style name="Theme.BancoEnnama" parent="Theme.Material3.DayNight.NoActionBar">
         <item name="colorPrimary">@color/green</item>
+
+    </style>
+
+    <style name="botones.BancoEnnama" parent="Widget.Material3.Button">
+        <item name="android:fontFamily">@font/glaston</item>
+        <item name="android:backgroundTint">@color/green</item>
+        <item name="android:textColor">@color/white</item>
+        <item name="android:textStyle">bold</item>
+        <item name="android:padding">12dp</item>
+        <item name="android:radius">16dp</item>
     </style>
 </resources>
