--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -1,209 +1,181 @@
 <?xml version="1.0" encoding="utf-8"?>
-<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<androidx.drawerlayout.widget.DrawerLayout
+    xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
-    android:id="@+id/main"
+    android:id="@+id/drawer_layout"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     tools:context=".activities.MainActivity">
 
-    <androidx.coordinatorlayout.widget.CoordinatorLayout
-        android:id="@+id/coordinator"
+    <!-- Main Content -->
+    <androidx.constraintlayout.widget.ConstraintLayout
+        android:id="@+id/main"
         android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        app:layout_constraintBottom_toBottomOf="parent">
+        android:layout_height="match_parent">
 
-        <com.google.android.material.bottomappbar.BottomAppBar
-            android:id="@+id/bab"
+        <!-- Toolbar -->
+        <androidx.appcompat.widget.Toolbar
+            android:id="@+id/appbar"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_gravity="bottom"
-            app:navigationIcon="@drawable/ic_menu"
-            style="@style/Widget.MaterialComponents.BottomAppBar.Colored"/>
+            android:layout_height="?attr/actionBarSize"
+            android:background="?attr/colorPrimary"
+            android:elevation="4dp"
+            android:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
+            app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
+            app:layout_constraintTop_toTopOf="parent" />
 
-        <com.google.android.material.floatingactionbutton.FloatingActionButton
-            android:id="@+id/fab"
-            android:layout_width="wrap_content"
-            android:layout_height="wrap_content"
-            android:src="@drawable/bank_24"
-            app:layout_anchor="@id/bab"
-            android:contentDescription="@string/add_task" />
-
-    </androidx.coordinatorlayout.widget.CoordinatorLayout>
-
-    <LinearLayout
-        android:id="@+id/ll"
-        android:layout_width="match_parent"
-        android:layout_height="match_parent"
-        android:orientation="vertical">
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/mcvBienvenido"
+        <!-- Scrollable Content -->
+        <ScrollView
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="32dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:clickable="true"
-            android:focusable="true">
+            android:layout_height="0dp"
+            android:layout_marginTop="?attr/actionBarSize"
+            app:layout_constraintTop_toBottomOf="@id/appbar"
+            app:layout_constraintBottom_toBottomOf="parent">
 
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/cl"
+            <LinearLayout
+                android:id="@+id/ll"
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp">
+                android:orientation="vertical"
+                android:padding="16dp">
 
-                <ImageView
-                    android:id="@+id/iv"
-                    android:layout_width="@dimen/card_img_size"
-                    android:layout_height="@dimen/card_img_size"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:src="@drawable/usuario"/>
-
-                <TextView
-                    android:id="@+id/tv"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:text="@string/bienvenido_a"
-                    android:fontFamily="@font/glaston"
-                    app:layout_constraintStart_toEndOf="@id/iv"
-                    android:layout_marginStart="48dp"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                    />
-
-                <TextView
-                    android:id="@+id/tv2"
-                    android:layout_width="0dp"
-                    android:layout_height="match_parent"
-                    android:layout_marginStart="58dp"
-                    android:text=""
-                    android:fontFamily="@font/glaston"
-                    android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintStart_toEndOf="@id/iv"
-                    app:layout_constraintTop_toBottomOf="@id/tv" />
-
-            </androidx.constraintlayout.widget.ConstraintLayout>
-
-        </com.google.android.material.card.MaterialCardView>
-
-        <com.google.android.material.card.MaterialCardView
-            android:id="@+id/mcvBotones"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:layout_marginTop="64dp"
-            android:layout_marginStart="16dp"
-            android:layout_marginEnd="16dp"
-            android:clickable="true"
-            android:focusable="true">
-
-            <androidx.constraintlayout.widget.ConstraintLayout
-                android:id="@+id/clBotones"
-                android:layout_width="match_parent"
-                android:layout_height="wrap_content"
-                android:layout_marginTop="16dp"
-                android:paddingStart="16dp"
-                android:paddingEnd="16dp">
-
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/posicionGlobal"
-                    style="@style/botones.BancoEnnama"
-                    app:icon="@drawable/posicion"
+                <!-- Tarjeta de bienvenida -->
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/mcvBienvenido"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/posicion_global"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toTopOf="parent"
-                    />
+                    android:layout_marginBottom="16dp"
+                    android:clickable="true"
+                    android:focusable="true">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/movimientos"
-                    style="@style/botones.BancoEnnama"
-                    app:icon="@drawable/movimientos"
+                    <androidx.constraintlayout.widget.ConstraintLayout
+                        android:id="@+id/cl"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:layout_margin="16dp">
+
+                        <ImageView
+                            android:id="@+id/iv"
+                            android:layout_width="72dp"
+                            android:layout_height="72dp"
+                            app:layout_constraintStart_toStartOf="parent"
+                            app:layout_constraintTop_toTopOf="parent"
+                            android:src="@drawable/usuario" />
+
+                        <TextView
+                            android:id="@+id/tv"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:text="@string/bienvenido_a"
+                            android:layout_marginStart="16dp"
+                            app:layout_constraintStart_toEndOf="@id/iv"
+                            app:layout_constraintTop_toTopOf="@id/iv"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
+
+                        <TextView
+                            android:id="@+id/tv2"
+                            android:layout_width="0dp"
+                            android:layout_height="wrap_content"
+                            android:layout_marginStart="16dp"
+                            app:layout_constraintStart_toEndOf="@id/iv"
+                            app:layout_constraintTop_toBottomOf="@id/tv"
+                            app:layout_constraintEnd_toEndOf="parent"
+                            android:textAppearance="@style/TextAppearance.MaterialComponents.Headline5" />
+                    </androidx.constraintlayout.widget.ConstraintLayout>
+                </com.google.android.material.card.MaterialCardView>
+
+                <!-- Botones -->
+                <com.google.android.material.card.MaterialCardView
+                    android:id="@+id/mcvBotones"
                     android:layout_width="match_parent"
                     android:layout_height="wrap_content"
-                    android:text="@string/movimientos"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/posicionGlobal"
-                    />
+                    android:clickable="true"
+                    android:focusable="true">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/transferencias"
-                    style="@style/botones.BancoEnnama"
-                    app:icon="@drawable/transferencias"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/transferencias"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/movimientos"
-                    />
+                    <LinearLayout
+                        android:id="@+id/clBotones"
+                        android:layout_width="match_parent"
+                        android:layout_height="wrap_content"
+                        android:orientation="vertical"
+                        android:padding="16dp">
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/cambiarContrasena"
-                    app:icon="@drawable/editar"
-                    style="@style/botones.BancoEnnama"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/cambiar_contrase_a"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/transferencias"
-                    />
+                        <!-- Botones -->
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/posicionGlobal"
+                            style="@style/botones.BancoEnnama"
+                            app:icon="@drawable/posicion"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/posicion_global" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/promociones"
-                    style="@style/botones.BancoEnnama"
-                    app:icon="@drawable/promocion"
-                    android:layout_width="match_parent"
-                    android:layout_height="wrap_content"
-                    android:text="@string/promociones"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cambiarContrasena"
-                    />
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/movimientos"
+                            style="@style/botones.BancoEnnama"
+                            app:icon="@drawable/movimientos"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/movimientos"
+                            android:layout_marginTop="8dp" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/cajeros"
-                    app:icon="@drawable/map_24"
-                    android:layout_width="match_parent"
-                    style="@style/botones.BancoEnnama"
-                    android:layout_height="wrap_content"
-                    android:text="@string/cajeros"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@+id/promociones"
-                    />
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/transferencias"
+                            style="@style/botones.BancoEnnama"
+                            app:icon="@drawable/transferencias"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/transferencias"
+                            android:layout_marginTop="8dp" />
 
-                <com.google.android.material.button.MaterialButton
-                    android:id="@+id/salir"
-                    app:icon="@drawable/flecha_atras"
-                    android:layout_width="match_parent"
-                    style="@style/botones.BancoEnnama"
-                    android:layout_height="wrap_content"
-                    android:text="@string/salir2"
-                    app:layout_constraintStart_toStartOf="parent"
-                    app:layout_constraintEnd_toEndOf="parent"
-                    app:layout_constraintTop_toBottomOf="@id/cajeros"
-                    />
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/cambiarContrasena"
+                            style="@style/botones.BancoEnnama"
+                            app:icon="@drawable/editar"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/cambiar_contrase_a"
+                            android:layout_marginTop="8dp" />
 
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/promociones"
+                            style="@style/botones.BancoEnnama"
+                            app:icon="@drawable/promocion"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/promociones"
+                            android:layout_marginTop="8dp" />
 
-            </androidx.constraintlayout.widget.ConstraintLayout>
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/cajeros"
+                            style="@style/botones.BancoEnnama"
+                            app:icon="@drawable/map_24"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/cajeros"
+                            android:layout_marginTop="8dp" />
 
-        </com.google.android.material.card.MaterialCardView>
+                        <com.google.android.material.button.MaterialButton
+                            android:id="@+id/salir"
+                            style="@style/botones.BancoEnnama"
+                            app:icon="@drawable/flecha_atras"
+                            android:layout_width="match_parent"
+                            android:layout_height="wrap_content"
+                            android:text="@string/salir2"
+                            android:layout_marginTop="8dp" />
+                    </LinearLayout>
+                </com.google.android.material.card.MaterialCardView>
+            </LinearLayout>
+        </ScrollView>
 
+    </androidx.constraintlayout.widget.ConstraintLayout>
 
-    </LinearLayout>
-
-
-
-
-
-</androidx.constraintlayout.widget.ConstraintLayout>
+    <!-- Navigation Drawer -->
+    <com.google.android.material.navigation.NavigationView
+        android:id="@+id/navigation_view"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_gravity="start"
+        app:menu="@menu/menu_navigation_drawer"
+        app:headerLayout="@layout/drawer_header" />
+</androidx.drawerlayout.widget.DrawerLayout>
