--- a/app/src/main/res/menu/menu_navigation_drawer.xml
+++ b/app/src/main/res/menu/menu_navigation_drawer.xml
@@ -33,6 +33,11 @@
             android:id="@+id/nav_atms"
             android:icon="@drawable/map_24"
             android:title="@string/cajeros"/>
+
+        <item
+            android:id="@+id/nav_sett"
+            android:icon="@drawable/settings"
+            android:title="@string/AJUSTES"/>
     </group>
 
     <item android:title="">
