--- a/app/src/main/res/layout/fragment_account_movements.xml
+++ b/app/src/main/res/layout/fragment_account_movements.xml
@@ -1,14 +1,15 @@
 <?xml version="1.0" encoding="utf-8"?>
 <FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
+    xmlns:app="http://schemas.android.com/apk/res-auto"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    xmlns:app="http://schemas.android.com/apk/res-auto"
     tools:context=".fragments.AccountMovementsFragment">
 
     <androidx.constraintlayout.widget.ConstraintLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent">
+
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/Movimientos"
             android:layout_width="match_parent"
@@ -20,8 +21,7 @@
             android:fontFamily="@font/glaston"
             android:textAlignment="center"
             style="@style/TextAppearance.MaterialComponents.Headline5"
-            android:layout_marginTop="20dp"
-            />
+            android:layout_marginTop="20dp" />
 
         <com.google.android.material.textview.MaterialTextView
             android:id="@+id/ultimosMovimientos"
@@ -32,17 +32,28 @@
             app:layout_constraintEnd_toEndOf="parent"
             android:text="@string/ultimos_movimientos"
             android:textSize="20sp"
-            android:layout_marginTop="32dp"
-            android:layout_marginStart="20dp"
-            />
+            android:layout_marginTop="16dp"
+            android:layout_marginStart="20dp" />
+
         <androidx.recyclerview.widget.RecyclerView
             android:id="@+id/reciclerView"
             android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            app:layout_constraintTop_toBottomOf="@+id/ultimosMovimientos"
-            app:layout_constraintEnd_toEndOf="parent"
+            android:layout_height="630dp"
+            app:layout_constraintTop_toBottomOf="@id/ultimosMovimientos"
             app:layout_constraintStart_toStartOf="parent"
-            android:layout_marginTop="32dp"
-            />
+            app:layout_constraintEnd_toEndOf="parent"
+            app:layout_constraintBottom_toTopOf="@id/bottomNavigation"
+            android:layout_marginTop="16dp"
+            android:layout_marginBottom="16dp" />
+
+        <com.google.android.material.bottomnavigation.BottomNavigationView
+            android:id="@+id/bottomNavigation"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            app:menu="@menu/bottom_navigation_menu"
+            app:layout_constraintBottom_toBottomOf="parent"
+            android:layout_gravity="bottom" />
+
     </androidx.constraintlayout.widget.ConstraintLayout>
+
 </FrameLayout>
